# color

./: .gitignore  .travis.yml  CMakeLists.txt  README.html  README.md  license.txt
example/: CMakeLists.txt  SConscript  SConstruct  akin.cpp  assign_const.cpp  assign_const_simple.cpp  check_integrity.cpp  check_overburn.cpp  check_unique.cpp  check_unique_hsl.cpp  check_unique_hsv.cpp  compare.cpp  compare_brighter.cpp  compare_darker.cpp  compare_different.cpp  compare_equal.cpp  compare_great_or_equal.cpp  compare_great_strict.cpp  compare_less_or_equal.cpp  compare_less_strict.cpp  convert_cmy2cmy.cpp  convert_cmy2gray.cpp  convert_cmy2hsl.cpp  convert_cmy2hsv.cpp  convert_cmy2yuv.cpp  convert_gray2cmy.cpp  convert_gray2rgb.cpp  convert_rgb2cmy.cpp  convert_rgb2gray.cpp  convert_rgb2yiq.cpp  ctor.cpp  ctor_cmy.cpp  ctor_cmyk.cpp  ctor_const.cpp  ctor_const_rgb_red.cpp  ctor_gray.cpp  ctor_hsl.cpp  ctor_hsv.cpp  ctor_list.cpp  ctor_rgb.cpp  (+97 more)
example/exclusive/: rgb-cmyk-yiq.hpp  rgb-cmyk-yiq.sh  rgb-cmyk.hpp  rgb-cmyk.sh  rgb.hpp  rgb.sh
example/gray/: invoke.cpp
example/less-than-1k/: CMakeLists.txt  create-big.bat  hello.cpp  make-big.sh  make.bat  make.sh  makeCmake.sh  pp2f.cpp  readme.md  run.sh  yuv601.cpp  yuv709.cpp
example/less-than-1k/akin/: CMakeLists.txt  cmy2gray.cpp  make.sh
example/less-than-1k/assign/: CMakeLists.txt  cmy2LabCH.cpp  cmy2LuvCH.cpp  cmy2YCgCo.cpp  cmy2YDbDr.cpp  cmy2YPbPr.cpp  cmy2YPbPr2020.cpp  cmy2YPbPr601.cpp  cmy2YPbPr709.cpp  cmy2cmy.cpp  cmy2cmyk.cpp  cmy2gray.cpp  cmy2hsi.cpp  cmy2hsl.cpp  cmy2hsv.cpp  cmy2hwb.cpp  cmy2lab.cpp  cmy2lms.cpp  cmy2lms_KE.cpp  cmy2luv.cpp  cmy2rgb.cpp  cmy2xyy.cpp  cmy2xyz.cpp  cmy2yiq.cpp  cmy2yuv.cpp  cmy2yuv601.cpp  cmy2yuv709.cpp  const_simple_cmy.cpp  const_simple_cmyk.cpp  const_simple_hsi.cpp  const_simple_hsl.cpp  const_simple_hsv.cpp  const_simple_rgb.cpp  const_simple_yiq.cpp  const_simple_yuv.cpp  const_simple_yuv601.cpp  make.bat  make.sh  run.sh
example/less-than-1k/check/: CMakeLists.txt  integrity_cmyk.cpp  integrity_hsl.cpp  integrity_hsv.cpp  make.sh  overburn_rgb.cpp  run.sh  unique_hsl.cpp  unique_hsv.cpp
example/less-than-1k/compare/: CMakeLists.txt  brighter_rgb.cpp  darker_rgb.cpp  different_rgb.cpp  equal_rgb.cpp  great_or_equal.cpp  great_strict.cpp  great_strict_rgb.cpp  less_or_equal.cpp  less_strict.cpp  make.bat  make.sh  run.sh
example/less-than-1k/constant/: CMakeLists.txt  gray_rgb.cpp  make.bat  make.sh  orange_rgb.cpp  run.sh
example/less-than-1k/convert/: CMakeLists.txt  cmy2cmy.cpp  cmy2cmyk.cpp  cmy2gray.cpp  cmy2hsl.cpp  cmy2hsv.cpp  cmy2rgb.cpp  cmy2yiq.cpp  cmy2yuv.cpp  gray2cmy.cpp  gray2rgb.cpp  make.bat  make.sh  rgb2cmy.cpp  rgb2cmyk.cpp  rgb2gray.cpp  rgb2hsl.cpp  rgb2hsv.cpp  rgb2rgb.cpp  rgb2yiq.cpp  rgb2yuv.cpp  run.sh
example/less-than-1k/ctor/: CMakeLists.txt  const_hsl_lavender.cpp  const_rgb_lavender.cpp  const_rgb_red.cpp  const_yiq_lavender.cpp  list_cmy.cpp  list_cmyk.cpp  list_gray.cpp  list_hsl.cpp  list_hsv.cpp  list_rgb.cpp  list_yiq.cpp  list_yuv.cpp  make.bat  make.sh  run.sh
example/less-than-1k/exclude/: make.sh  no_YCgCo.cpp  no_YDbDr.cpp  no_YPbPr.cpp  no_cmy.cpp  no_cmyk.cpp  no_hsi.cpp  no_hsl.cpp  no_hsv.cpp  no_hue.cpp  no_luma.cpp  no_no_gray.cpp  no_no_rgb.cpp  no_yiq.cpp  no_yuv.cpp
example/less-than-1k/exclusive/: make.sh  rgb-cmy-yiq.cpp  rgb-cmyk.cpp  rgb-yiq-yuv.cpp  rgb-yiq.cpp  rgb.cpp
example/less-than-1k/fix/: CMakeLists.txt  fix_unique_hsv.cpp  integrity_hsl.cpp  integrity_hsv.cpp  make.bat  make.sh  overburn_rgb.cpp  run.sh
example/less-than-1k/format/: CMakeLists.txt  double_rgb.cpp  float_rgb.cpp  format_ldouble_rgb.cpp  make.bat  make.sh  run.sh  split2222_abgr.cpp  split2222_argb.cpp  split2222_bgra.cpp  split2222_rgba.cpp  split4444_abgr.cpp  split4444_argb.cpp  split4444_bgra.cpp  split4444_rgba.cpp  split8888_abgr.cpp  split8888_argb.cpp  split8888_bgra.cpp  split8888_rgba.cpp  splitAAA2_cmyk.cpp  splitAAA2_rgba.cpp  uint8_cmy.cpp  uint8_cmyk.cpp  uint8_gray.cpp  uint8_hsl.cpp  uint8_hsv.cpp  uint8_rgb.cpp  uint8_yiq.cpp  uint8_yuv.cpp
example/less-than-1k/get/: CMakeLists.txt  blue_cmy.cpp  blue_cmyk.cpp  blue_gray.cpp  blue_hsl.cpp  blue_hsv.cpp  blue_rgb.cpp  blue_yiq.cpp  blue_yuv.cpp  get_red_rgb.cpp  gray_cmy.cpp  gray_cmyk.cpp  gray_gray.cpp  gray_hsl.cpp  gray_yiq.cpp  gray_yuv.cpp  green_cmy.cpp  green_cmyk.cpp  green_gray.cpp  green_hsl.cpp  green_hsv.cpp  green_rgb.cpp  green_yiq.cpp  green_yuv.cpp  hue_rgb.cpp  hue_rgb_acos.cpp  hue_rgb_atan2.cpp  hue_rgb_hex.cpp  make.bat  make.sh  red_cmyk.cpp  red_hsl.cpp  red_hsv.cpp  red_rgb.cpp  red_yiq.cpp  red_yuv.cpp  run.sh
example/less-than-1k/make/: cmy_red.cpp  cmyk_red.cpp  gray_red.cpp  hsl_red.cpp  hsv_red.cpp  make.sh  rgb_red.cpp  yiq_red.cpp  yuv_red.cpp
example/less-than-1k/operation/: CMakeLists.txt  addition.cpp  bias.cpp  blend_alpha2.cpp  blend_alpha3.cpp  blend_noalpha2.cpp  blend_noalpha3.cpp  ceil.cpp  clip.cpp  convex1.cpp  convex2.cpp  delta.cpp  divide.cpp  floor.cpp  gain.cpp  gamma.cpp  invert_cmy.cpp  invert_cmyk.cpp  invert_gray.cpp  invert_hsl.cpp  invert_hsv.cpp  invert_rgb.cpp  invert_yiq.cpp  invert_yuv.cpp  make.bat  make.sh  median1.cpp  median2.cpp  mix_alpha.cpp  mix_noalpha.cpp  multiply.cpp  run.sh  scale.cpp  subtract.cpp
example/less-than-1k/operator/: CMakeLists.txt  addition.cpp  divide.cpp  make.bat  (+4 more)
example/less-than-2k/: CMakeLists.txt  make.bat  make.sh  memfill.cpp  readme.md  run.sh
example/model/: get.hpp  intrisic_conversion.hpp  invoke.hpp  make.hpp  operation.hpp  set.hpp
example/test/: SConscript  SConstruct  TODO.txt  allgray.cpp  allrgb.cpp  astyle.conf  blank12.sln  blank14.sln  bound-OK.html  bound.cpp  bound.html  check_conv.bat  check_conv.sh  color.layout  cone-const.cpp  constant.cpp  conversion.cpp  convsemi.cpp  decompose.cpp  ec.cpp  extract.cpp  get.cpp  get_invoke.cpp  get_test.cpp  gray_scale.cpp  gray_test.cpp  image.cpp  image.hpp  main.cpp  make.cpp  make.pp2f.sh  palette.cpp  pallete.cpp  place.cpp  precision.cpp  print.hpp  readme.md  rgb-only.cpp  selfie.cpp  set.cpp  (+18 more)
(+4924 files in other folders)
