
add_executable (empty empty.cpp)
add_executable (hello hello.cpp)
add_executable (pp2f pp2f.cpp)
enable_testing ()

# test source files
set (TEST_SRCS
  assign/cmy/cmy2cmy.cpp
  assign/cmy/cmy2cmyk.cpp
  assign/cmy/cmy2gray.cpp
  assign/cmy/cmy2hsi.cpp
  assign/cmy/cmy2hsl.cpp
  assign/cmy/cmy2hsv.cpp
  assign/cmy/cmy2hwb.cpp
  assign/cmy/cmy2lab.cpp
  assign/cmy/cmy2LabCH.cpp
  assign/cmy/cmy2lms.cpp
  assign/cmy/cmy2lms_BFD.cpp
  assign/cmy/cmy2lms_K65.cpp
  assign/cmy/cmy2lms_KE.cpp
  assign/cmy/cmy2lms_MCAT02.cpp
  assign/cmy/cmy2luv.cpp
  assign/cmy/cmy2LuvCH.cpp
  assign/cmy/cmy2rgb.cpp
  assign/cmy/cmy2xyy.cpp
  assign/cmy/cmy2xyz.cpp
  assign/cmy/cmy2YCgCo.cpp
  assign/cmy/cmy2YDbDr.cpp
  assign/cmy/cmy2yiq.cpp
  assign/cmy/cmy2YPbPr.cpp
  assign/cmy/cmy2YPbPr2020.cpp
  assign/cmy/cmy2YPbPr601.cpp
  assign/cmy/cmy2YPbPr709.cpp
  assign/cmy/cmy2yuv.cpp
  assign/cmy/cmy2yuv601.cpp
  assign/cmy/cmy2yuv709.cpp
  assign/cmyk/cmyk2cmy.cpp
  assign/cmyk/cmyk2cmyk.cpp
  assign/cmyk/cmyk2gray.cpp
  assign/cmyk/cmyk2hsi.cpp
  assign/cmyk/cmyk2hsl.cpp
  assign/cmyk/cmyk2hsv.cpp
  assign/cmyk/cmyk2hwb.cpp
  assign/cmyk/cmyk2lab.cpp
  assign/cmyk/cmyk2LabCH.cpp
  assign/cmyk/cmyk2lms.cpp
  assign/cmyk/cmyk2lms_BFD.cpp
  assign/cmyk/cmyk2lms_K65.cpp
  assign/cmyk/cmyk2lms_KE.cpp
  assign/cmyk/cmyk2lms_MCAT02.cpp
  assign/cmyk/cmyk2luv.cpp
  assign/cmyk/cmyk2LuvCH.cpp
  assign/cmyk/cmyk2rgb.cpp
  assign/cmyk/cmyk2xyy.cpp
  assign/cmyk/cmyk2xyz.cpp
  assign/cmyk/cmyk2YCgCo.cpp
  assign/cmyk/cmyk2YDbDr.cpp
  assign/cmyk/cmyk2yiq.cpp
  assign/cmyk/cmyk2YPbPr.cpp
  assign/cmyk/cmyk2YPbPr2020.cpp
  assign/cmyk/cmyk2YPbPr601.cpp
  assign/cmyk/cmyk2YPbPr709.cpp
  assign/cmyk/cmyk2yuv.cpp
  assign/cmyk/cmyk2yuv601.cpp
  assign/cmyk/cmyk2yuv709.cpp
  assign/const/cmy.cpp
  assign/const/cmyk.cpp
  assign/const/gray.cpp
  assign/const/hsi.cpp
  assign/const/hsl.cpp
  assign/const/hsv.cpp
  assign/const/hwb.cpp
  assign/const/lab.cpp
  assign/const/LabCH.cpp
  assign/const/lms.cpp
  assign/const/luv.cpp
  assign/const/LuvCH.cpp
  assign/const/rgb.cpp
  assign/const/xyy.cpp
  assign/const/xyz.cpp
  assign/const/YCgCo.cpp
  assign/const/YDbDr.cpp
  assign/const/yiq.cpp
  assign/const/YPbPr.cpp
  assign/const/YPbPr2020.cpp
  assign/const/YPbPr601.cpp
  assign/const/YPbPr709.cpp
  assign/const/yuv.cpp
  assign/const/yuv601.cpp
  assign/const/yuv709.cpp
  assign/gray/gray2cmy.cpp
  assign/gray/gray2cmyk.cpp
  assign/gray/gray2gray.cpp
  assign/gray/gray2hsi.cpp
  assign/gray/gray2hsl.cpp
  assign/gray/gray2hsv.cpp
  assign/gray/gray2hwb.cpp
  assign/gray/gray2lab.cpp
  assign/gray/gray2labCH.cpp
  assign/gray/gray2lms.cpp
  assign/gray/gray2lms_BFD.cpp
  assign/gray/gray2lms_K65.cpp
  assign/gray/gray2lms_KE.cpp
  assign/gray/gray2lms_MCAT02.cpp
  assign/gray/gray2luv.cpp
  assign/gray/gray2LuvCH.cpp
  assign/gray/gray2rgb.cpp
  assign/gray/gray2xyy.cpp
  assign/gray/gray2xyz.cpp
  assign/gray/gray2YCgCo.cpp
  assign/gray/gray2YDbDr.cpp
  assign/gray/gray2yiq.cpp
  assign/gray/gray2YPbPr.cpp
  assign/gray/gray2YPbPr2020.cpp
  assign/gray/gray2YPbPr601.cpp
  assign/gray/gray2YPbPr709.cpp
  assign/gray/gray2yuv.cpp
  assign/gray/gray2yuv601.cpp
  assign/gray/gray2yuv709.cpp
  assign/hsi/hsi2cmy.cpp
  assign/hsi/hsi2cmyk.cpp
  assign/hsi/hsi2gray.cpp
  assign/hsi/hsi2hsi.cpp
  assign/hsi/hsi2hsl.cpp
  assign/hsi/hsi2hsv.cpp
  assign/hsi/hsi2hwb.cpp
  assign/hsi/hsi2lab.cpp
  assign/hsi/hsi2LabCH.cpp
  assign/hsi/hsi2lms.cpp
  assign/hsi/hsi2lms_BFD.cpp
  assign/hsi/hsi2lms_K65.cpp
  assign/hsi/hsi2lms_KE.cpp
  assign/hsi/hsi2lms_MCAT02.cpp
  assign/hsi/hsi2luv.cpp
  assign/hsi/hsi2LuvCH.cpp
  assign/hsi/hsi2rgb.cpp
  assign/hsi/hsi2xyy.cpp
  assign/hsi/hsi2xyz.cpp
  assign/hsi/hsi2YCgCo.cpp
  assign/hsi/hsi2YDbDr.cpp
  assign/hsi/hsi2yiq.cpp
  assign/hsi/hsi2YPbPr.cpp
  assign/hsi/hsi2YPbPr2020.cpp
  assign/hsi/hsi2YPbPr601.cpp
  assign/hsi/hsi2YPbPr709.cpp
  assign/hsi/hsi2yuv.cpp
  assign/hsi/hsi2yuv601.cpp
  assign/hsi/hsi2yuv709.cpp
  assign/hsl/hsl2cmy.cpp
  assign/hsl/hsl2cmyk.cpp
  assign/hsl/hsl2gray.cpp
  assign/hsl/hsl2hsi.cpp
  assign/hsl/hsl2hsl.cpp
  assign/hsl/hsl2hsv.cpp
  assign/hsl/hsl2hwb.cpp
  assign/hsl/hsl2lab.cpp
  assign/hsl/hsl2LabCH.cpp
  assign/hsl/hsl2lms.cpp
  assign/hsl/hsl2lms_BFD.cpp
  assign/hsl/hsl2lms_K65.cpp
  assign/hsl/hsl2lms_KE.cpp
  assign/hsl/hsl2lms_MCAT02.cpp
  assign/hsl/hsl2luv.cpp
  assign/hsl/hsl2LuvCH.cpp
  assign/hsl/hsl2rgb.cpp
  assign/hsl/hsl2xyy.cpp
  assign/hsl/hsl2xyz.cpp
  assign/hsl/hsl2YCgCo.cpp
  assign/hsl/hsl2YDbDr.cpp
  assign/hsl/hsl2yiq.cpp
  assign/hsl/hsl2YPbPr.cpp
  assign/hsl/hsl2YPbPr2020.cpp
  assign/hsl/hsl2YPbPr601.cpp
  assign/hsl/hsl2YPbPr709.cpp
  assign/hsl/hsl2yuv.cpp
  assign/hsl/hsl2yuv601.cpp
  assign/hsl/hsl2yuv709.cpp
  assign/hsv/hsv2cmy.cpp
  assign/hsv/hsv2cmyk.cpp
  assign/hsv/hsv2gray.cpp
  assign/hsv/hsv2hsi.cpp
  assign/hsv/hsv2hsl.cpp
  assign/hsv/hsv2hsv.cpp
  assign/hsv/hsv2hwb.cpp
  assign/hsv/hsv2lab.cpp
  assign/hsv/hsv2LabCH.cpp
  assign/hsv/hsv2lms.cpp
  assign/hsv/hsv2lms_BFD.cpp
  assign/hsv/hsv2lms_K65.cpp
  assign/hsv/hsv2lms_KE.cpp
  assign/hsv/hsv2lms_MCAT02.cpp
  assign/hsv/hsv2luv.cpp
  assign/hsv/hsv2LuvCH.cpp
  assign/hsv/hsv2rgb.cpp
  assign/hsv/hsv2xyy.cpp
  assign/hsv/hsv2xyz.cpp
  assign/hsv/hsv2YCgCo.cpp
  assign/hsv/hsv2YDbDr.cpp
  assign/hsv/hsv2yiq.cpp
  assign/hsv/hsv2YPbPr.cpp
  assign/hsv/hsv2YPbPr2020.cpp
  assign/hsv/hsv2YPbPr601.cpp
  assign/hsv/hsv2YPbPr709.cpp
  assign/hsv/hsv2yuv.cpp
  assign/hsv/hsv2yuv601.cpp
  assign/hsv/hsv2yuv709.cpp
  assign/hwb/hwb2cmy.cpp
  assign/hwb/hwb2cmyk.cpp
  assign/hwb/hwb2gray.cpp
  assign/hwb/hwb2hsi.cpp
  assign/hwb/hwb2hsl.cpp
  assign/hwb/hwb2hsv.cpp
  assign/hwb/hwb2hwb.cpp
  assign/hwb/hwb2lab.cpp
  assign/hwb/hwb2labCH.cpp
  assign/hwb/hwb2lms.cpp
  assign/hwb/hwb2lms_BFD.cpp
  assign/hwb/hwb2lms_K65.cpp
  assign/hwb/hwb2lms_KE.cpp
  assign/hwb/hwb2lms_MCAT02.cpp
  assign/hwb/hwb2luv.cpp
  assign/hwb/hwb2LuvCH.cpp
  assign/hwb/hwb2rgb.cpp
  assign/hwb/hwb2xyy.cpp
  assign/hwb/hwb2xyz.cpp
  assign/hwb/hwb2YCgCo.cpp
  assign/hwb/hwb2YDbDr.cpp
  assign/hwb/hwb2yiq.cpp
  assign/hwb/hwb2YPbPr.cpp
  assign/hwb/hwb2YPbPr2020.cpp
  assign/hwb/hwb2YPbPr601.cpp
  assign/hwb/hwb2YPbPr709.cpp
  assign/hwb/hwb2yuv.cpp
  assign/hwb/hwb2yuv601.cpp
  assign/hwb/hwb2yuv709.cpp
  assign/lab/lab2cmy.cpp
  assign/lab/lab2cmyk.cpp
  assign/lab/lab2gray.cpp
  assign/lab/lab2hsi.cpp
  assign/lab/lab2hsl.cpp
  assign/lab/lab2hsv.cpp
  assign/lab/lab2hwb.cpp
  assign/lab/lab2lab.cpp
  assign/lab/lab2LabCH.cpp
  assign/lab/lab2lms.cpp
  assign/lab/lab2lms_BFD.cpp
  assign/lab/lab2lms_K65.cpp
  assign/lab/lab2lms_KE.cpp
  assign/lab/lab2lms_MCAT02.cpp
  assign/lab/lab2luv.cpp
  assign/lab/lab2LuvCH.cpp
  assign/lab/lab2rgb.cpp
  assign/lab/lab2xyy.cpp
  assign/lab/lab2xyz.cpp
  assign/lab/lab2YCgCo.cpp
  assign/lab/lab2YDbDr.cpp
  assign/lab/lab2yiq.cpp
  assign/lab/lab2YPbPr.cpp
  assign/lab/lab2YPbPr2020.cpp
  assign/lab/lab2YPbPr601.cpp
  assign/lab/lab2YPbPr709.cpp
  assign/lab/lab2yuv.cpp
  assign/lab/lab2yuv601.cpp
  assign/lab/lab2yuv709.cpp
  assign/LabCH/LabCH2cmy.cpp
  assign/LabCH/LabCH2cmyk.cpp
  assign/LabCH/LabCH2gray.cpp
  assign/LabCH/LabCH2hsi.cpp
  assign/LabCH/LabCH2hsl.cpp
  assign/LabCH/LabCH2hsv.cpp
  assign/LabCH/LabCH2hwb.cpp
  assign/LabCH/LabCH2lab.cpp
  assign/LabCH/LabCH2LabCH.cpp
  assign/LabCH/LabCH2lms.cpp
  assign/LabCH/LabCH2lms_BFD.cpp
  assign/LabCH/LabCH2lms_K65.cpp
  assign/LabCH/LabCH2lms_KE.cpp
  assign/LabCH/LabCH2lms_MCAT02.cpp
  assign/LabCH/LabCH2luv.cpp
  assign/LabCH/LabCH2LuvCH.cpp
  assign/LabCH/LabCH2rgb.cpp
  assign/LabCH/LabCH2xyy.cpp
  assign/LabCH/LabCH2xyz.cpp
  assign/LabCH/LabCH2YCgCo.cpp
  assign/LabCH/LabCH2YDbDr.cpp
  assign/LabCH/LabCH2yiq.cpp
  assign/LabCH/LabCH2YPbPr.cpp
  assign/LabCH/LabCH2YPbPr2020.cpp
  assign/LabCH/LabCH2YPbPr601.cpp
  assign/LabCH/LabCH2YPbPr709.cpp
  assign/LabCH/LabCH2yuv.cpp
  assign/LabCH/LabCH2yuv601.cpp
  assign/LabCH/LabCH2yuv709.cpp
  assign/lms/lms2cmy.cpp
  assign/lms/lms2cmyk.cpp
  assign/lms/lms2gray.cpp
  assign/lms/lms2hsi.cpp
  assign/lms/lms2hsl.cpp
  assign/lms/lms2hsv.cpp
  assign/lms/lms2hwb.cpp
  assign/lms/lms2lab.cpp
  assign/lms/lms2LabCH.cpp
  assign/lms/lms2lms.cpp
  assign/lms/lms2lms_BFD.cpp
  assign/lms/lms2lms_K65.cpp
  assign/lms/lms2lms_KE.cpp
  assign/lms/lms2lms_MCAT02.cpp
  assign/lms/lms2luv.cpp
  assign/lms/lms2LuvCH.cpp
  assign/lms/lms2rgb.cpp
  assign/lms/lms2xyy.cpp
  assign/lms/lms2xyz.cpp
  assign/lms/lms2YCgCo.cpp
  assign/lms/lms2YDbDr.cpp
  assign/lms/lms2yiq.cpp
  assign/lms/lms2YPbPr.cpp
  assign/lms/lms2YPbPr2020.cpp
  assign/lms/lms2YPbPr601.cpp
  assign/lms/lms2YPbPr709.cpp
  assign/lms/lms2yuv.cpp
  assign/lms/lms2yuv601.cpp
  assign/lms/lms2yuv709.cpp
  assign/luv/luv2cmy.cpp
  assign/luv/luv2cmyk.cpp
  assign/luv/luv2gray.cpp
  assign/luv/luv2hsi.cpp
  assign/luv/luv2hsl.cpp
  assign/luv/luv2hsv.cpp
  assign/luv/luv2hwb.cpp
  assign/luv/luv2lab.cpp
  assign/luv/luv2LabCH.cpp
  assign/luv/luv2lms.cpp
  assign/luv/luv2lms_BFD.cpp
  assign/luv/luv2lms_K65.cpp
  assign/luv/luv2lms_KE.cpp
  assign/luv/luv2lms_MCAT02.cpp
  assign/luv/luv2luv.cpp
  assign/luv/luv2LuvCH.cpp
  assign/luv/luv2rgb.cpp
  assign/luv/luv2xyy.cpp
  assign/luv/luv2xyz.cpp
  assign/luv/luv2YCgCo.cpp
  assign/luv/luv2YDbDr.cpp
  assign/luv/luv2yiq.cpp
  assign/luv/luv2YPbPr.cpp
  assign/luv/luv2YPbPr2020.cpp
  assign/luv/luv2YPbPr601.cpp
  assign/luv/luv2YPbPr709.cpp
  assign/luv/luv2yuv.cpp
  assign/luv/luv2yuv601.cpp
  assign/luv/luv2yuv709.cpp
  assign/LuvCH/LuvCH2cmy.cpp
  assign/LuvCH/LuvCH2cmyk.cpp
  assign/LuvCH/LuvCH2gray.cpp
  assign/LuvCH/LuvCH2hsi.cpp
  assign/LuvCH/LuvCH2hsl.cpp
  assign/LuvCH/LuvCH2hsv.cpp
  assign/LuvCH/LuvCH2hwb.cpp
  assign/LuvCH/LuvCH2lab.cpp
  assign/LuvCH/LuvCH2LabCH.cpp
  assign/LuvCH/LuvCH2lms.cpp
  assign/LuvCH/LuvCH2lms_BFD.cpp
  assign/LuvCH/LuvCH2lms_K65.cpp
  assign/LuvCH/LuvCH2lms_KE.cpp
  assign/LuvCH/LuvCH2lms_MCAT02.cpp
  assign/LuvCH/LuvCH2luv.cpp
  assign/LuvCH/LuvCH2LuvCH.cpp
  assign/LuvCH/LuvCH2rgb.cpp
  assign/LuvCH/LuvCH2xyy.cpp
  assign/LuvCH/LuvCH2xyz.cpp
  assign/LuvCH/LuvCH2YCgCo.cpp
  assign/LuvCH/LuvCH2YDbDr.cpp
  assign/LuvCH/LuvCH2yiq.cpp
  assign/LuvCH/LuvCH2YPbPr.cpp
  assign/LuvCH/LuvCH2YPbPr2020.cpp
  assign/LuvCH/LuvCH2YPbPr601.cpp
  assign/LuvCH/LuvCH2YPbPr709.cpp
  assign/LuvCH/LuvCH2yuv.cpp
  assign/LuvCH/LuvCH2yuv601.cpp
  assign/LuvCH/LuvCH2yuv709.cpp
  assign/rgb/rgb2cmy.cpp
  assign/rgb/rgb2cmyk.cpp
  assign/rgb/rgb2gray.cpp
  assign/rgb/rgb2hsi.cpp
  assign/rgb/rgb2hsl.cpp
  assign/rgb/rgb2hsv.cpp
  assign/rgb/rgb2hwb.cpp
  assign/rgb/rgb2lab.cpp
  assign/rgb/rgb2LabCH.cpp
  assign/rgb/rgb2lms.cpp
  assign/rgb/rgb2lms_BFD.cpp
  assign/rgb/rgb2lms_K65.cpp
  assign/rgb/rgb2lms_KE.cpp
  assign/rgb/rgb2lms_MCAT02.cpp
  assign/rgb/rgb2luv.cpp
  assign/rgb/rgb2LuvCH.cpp
  assign/rgb/rgb2rgb.cpp
  assign/rgb/rgb2xyy.cpp
  assign/rgb/rgb2xyz.cpp
  assign/rgb/rgb2YCgCo.cpp
  assign/rgb/rgb2YDbDr.cpp
  assign/rgb/rgb2yiq.cpp
  assign/rgb/rgb2YPbPr.cpp
  assign/rgb/rgb2YPbPr2020.cpp
  assign/rgb/rgb2YPbPr601.cpp
  assign/rgb/rgb2YPbPr709.cpp
  assign/rgb/rgb2yuv.cpp
  assign/rgb/rgb2yuv601.cpp
  assign/rgb/rgb2yuv709.cpp
  assign/xyy/xyy2cmy.cpp
  assign/xyy/xyy2cmyk.cpp
  assign/xyy/xyy2gray.cpp
  assign/xyy/xyy2hsi.cpp
  assign/xyy/xyy2hsl.cpp
  assign/xyy/xyy2hsv.cpp
  assign/xyy/xyy2hwb.cpp
  assign/xyy/xyy2lab.cpp
  assign/xyy/xyy2LabCH.cpp
  assign/xyy/xyy2lms.cpp
  assign/xyy/xyy2lms_BFD.cpp
  assign/xyy/xyy2lms_K65.cpp
  assign/xyy/xyy2lms_KE.cpp
  assign/xyy/xyy2lms_MCAT02.cpp
  assign/xyy/xyy2luv.cpp
  assign/xyy/xyy2LuvCH.cpp
  assign/xyy/xyy2rgb.cpp
  assign/xyy/xyy2xyy.cpp
  assign/xyy/xyy2xyz.cpp
  assign/xyy/xyy2YCgCo.cpp
  assign/xyy/xyy2YDbDr.cpp
  assign/xyy/xyy2yiq.cpp
  assign/xyy/xyy2YPbPr.cpp
  assign/xyy/xyy2YPbPr2020.cpp
  assign/xyy/xyy2YPbPr601.cpp
  assign/xyy/xyy2YPbPr709.cpp
  assign/xyy/xyy2yuv.cpp
  assign/xyy/xyy2yuv601.cpp
  assign/xyy/xyy2yuv709.cpp
  assign/xyz/xyz2cmy.cpp
  assign/xyz/xyz2cmyk.cpp
  assign/xyz/xyz2gray.cpp
  assign/xyz/xyz2hsi.cpp
  assign/xyz/xyz2hsl.cpp
  assign/xyz/xyz2hsv.cpp
  assign/xyz/xyz2hwb.cpp
  assign/xyz/xyz2lab.cpp
  assign/xyz/xyz2LabCH.cpp
  assign/xyz/xyz2lms.cpp
  assign/xyz/xyz2lms_BFD.cpp
  assign/xyz/xyz2lms_K65.cpp
  assign/xyz/xyz2lms_KE.cpp
  assign/xyz/xyz2lms_MCAT02.cpp
  assign/xyz/xyz2luv.cpp
  assign/xyz/xyz2LuvCH.cpp
  assign/xyz/xyz2rgb.cpp
  assign/xyz/xyz2xyy.cpp
  assign/xyz/xyz2xyz.cpp
  assign/xyz/xyz2YCgCo.cpp
  assign/xyz/xyz2YDbDr.cpp
  assign/xyz/xyz2yiq.cpp
  assign/xyz/xyz2YPbPr.cpp
  assign/xyz/xyz2YPbPr2020.cpp
  assign/xyz/xyz2YPbPr601.cpp
  assign/xyz/xyz2YPbPr709.cpp
  assign/xyz/xyz2yuv.cpp
  assign/xyz/xyz2yuv601.cpp
  assign/xyz/xyz2yuv709.cpp
  assign/YCgCo/YCgCo2cmy.cpp
  assign/YCgCo/YCgCo2cmyk.cpp
  assign/YCgCo/YCgCo2gray.cpp
  assign/YCgCo/YCgCo2hsi.cpp
  assign/YCgCo/YCgCo2hsl.cpp
  assign/YCgCo/YCgCo2hsv.cpp
  assign/YCgCo/YCgCo2hwb.cpp
  assign/YCgCo/YCgCo2lab.cpp
  assign/YCgCo/YCgCo2LabCH.cpp
  assign/YCgCo/YCgCo2lms.cpp
  assign/YCgCo/YCgCo2lms_BFD.cpp
  assign/YCgCo/YCgCo2lms_K65.cpp
  assign/YCgCo/YCgCo2lms_KE.cpp
  assign/YCgCo/YCgCo2lms_MCAT02.cpp
  assign/YCgCo/YCgCo2luv.cpp
  assign/YCgCo/YCgCo2LuvCH.cpp
  assign/YCgCo/YCgCo2rgb.cpp
  assign/YCgCo/YCgCo2xyy.cpp
  assign/YCgCo/YCgCo2xyz.cpp
  assign/YCgCo/YCgCo2YCgCo.cpp
  assign/YCgCo/YCgCo2YDbDr.cpp
  assign/YCgCo/YCgCo2yiq.cpp
  assign/YCgCo/YCgCo2YPbPr.cpp
  assign/YCgCo/YCgCo2YPbPr2020.cpp
  assign/YCgCo/YCgCo2YPbPr601.cpp
  assign/YCgCo/YCgCo2YPbPr709.cpp
  assign/YCgCo/YCgCo2yuv.cpp
  assign/YCgCo/YCgCo2yuv601.cpp
  assign/YCgCo/YCgCo2yuv709.cpp
  assign/YDbDr/YDbDr2cmy.cpp
  assign/YDbDr/YDbDr2cmyk.cpp
  assign/YDbDr/YDbDr2gray.cpp
  assign/YDbDr/YDbDr2hsi.cpp
  assign/YDbDr/YDbDr2hsl.cpp
  assign/YDbDr/YDbDr2hsv.cpp
  assign/YDbDr/YDbDr2hwb.cpp
  assign/YDbDr/YDbDr2lab.cpp
  assign/YDbDr/YDbDr2LabCH.cpp
  assign/YDbDr/YDbDr2lms.cpp
  assign/YDbDr/YDbDr2lms_BFD.cpp
  assign/YDbDr/YDbDr2lms_K65.cpp
  assign/YDbDr/YDbDr2lms_KE.cpp
  assign/YDbDr/YDbDr2lms_MCAT02.cpp
  assign/YDbDr/YDbDr2luv.cpp
  assign/YDbDr/YDbDr2LuvCH.cpp
  assign/YDbDr/YDbDr2rgb.cpp
  assign/YDbDr/YDbDr2xyy.cpp
  assign/YDbDr/YDbDr2xyz.cpp
  assign/YDbDr/YDbDr2YCgCo.cpp
  assign/YDbDr/YDbDr2YDbDr.cpp
  assign/YDbDr/YDbDr2yiq.cpp
  assign/YDbDr/YDbDr2YPbPr.cpp
  assign/YDbDr/YDbDr2YPbPr2020.cpp
  assign/YDbDr/YDbDr2YPbPr601.cpp
  assign/YDbDr/YDbDr2YPbPr709.cpp
  assign/YDbDr/YDbDr2yuv.cpp
  assign/YDbDr/YDbDr2yuv601.cpp
  assign/YDbDr/YDbDr2yuv709.cpp
  assign/yiq/yiq2cmy.cpp
  assign/yiq/yiq2cmyk.cpp
  assign/yiq/yiq2gray.cpp
  assign/yiq/yiq2hsi.cpp
  assign/yiq/yiq2hsl.cpp
  assign/yiq/yiq2hsv.cpp
  assign/yiq/yiq2hwb.cpp
  assign/yiq/yiq2lab.cpp
  assign/yiq/yiq2LabCH.cpp
  assign/yiq/yiq2lms.cpp
  assign/yiq/yiq2lms_BFD.cpp
  assign/yiq/yiq2lms_K65.cpp
  assign/yiq/yiq2lms_KE.cpp
  assign/yiq/yiq2lms_MCAT02.cpp
  assign/yiq/yiq2luv.cpp
  assign/yiq/yiq2LuvCH.cpp
  assign/yiq/yiq2rgb.cpp
  assign/yiq/yiq2xyy.cpp
  assign/yiq/yiq2xyz.cpp
  assign/yiq/yiq2YCgCo.cpp
  assign/yiq/yiq2YDbDr.cpp
  assign/yiq/yiq2yiq.cpp
  assign/yiq/yiq2YPbPr.cpp
  assign/yiq/yiq2YPbPr2020.cpp
  assign/yiq/yiq2YPbPr601.cpp
  assign/yiq/yiq2YPbPr709.cpp
  assign/yiq/yiq2yuv.cpp
  assign/yiq/yiq2yuv601.cpp
  assign/yiq/yiq2yuv709.cpp
  assign/YPbPr/YPbPr2cmy.cpp
  assign/YPbPr/YPbPr2cmyk.cpp
  assign/YPbPr/YPbPr2gray.cpp
  assign/YPbPr/YPbPr2hsi.cpp
  assign/YPbPr/YPbPr2hsl.cpp
  assign/YPbPr/YPbPr2hsv.cpp
  assign/YPbPr/YPbPr2hwb.cpp
  assign/YPbPr/YPbPr2lab.cpp
  assign/YPbPr/YPbPr2LabCH.cpp
  assign/YPbPr/YPbPr2lms.cpp
  assign/YPbPr/YPbPr2lms_BFD.cpp
  assign/YPbPr/YPbPr2lms_K65.cpp
  assign/YPbPr/YPbPr2lms_KE.cpp
  assign/YPbPr/YPbPr2lms_MCAT02.cpp
  assign/YPbPr/YPbPr2luv.cpp
  assign/YPbPr/YPbPr2LuvCH.cpp
  assign/YPbPr/YPbPr2rgb.cpp
  assign/YPbPr/YPbPr2xyy.cpp
  assign/YPbPr/YPbPr2xyz.cpp
  assign/YPbPr/YPbPr2YCgCo.cpp
  assign/YPbPr/YPbPr2YDbDr.cpp
  assign/YPbPr/YPbPr2yiq.cpp
  assign/YPbPr/YPbPr2YPbPr.cpp
  assign/YPbPr/YPbPr2YPbPr2020.cpp
  assign/YPbPr/YPbPr2YPbPr601.cpp
  assign/YPbPr/YPbPr2YPbPr709.cpp
  assign/YPbPr/YPbPr2yuv.cpp
  assign/YPbPr/YPbPr2yuv601.cpp
  assign/YPbPr/YPbPr2yuv709.cpp
  assign/yuv/yuv2cmy.cpp
  assign/yuv/yuv2cmyk.cpp
  assign/yuv/yuv2gray.cpp
  assign/yuv/yuv2hsi.cpp
  assign/yuv/yuv2hsl.cpp
  assign/yuv/yuv2hsv.cpp
  assign/yuv/yuv2hwb.cpp
  assign/yuv/yuv2lab.cpp
  assign/yuv/yuv2LabCH.cpp
  assign/yuv/yuv2lms.cpp
  assign/yuv/yuv2lms_BFD.cpp
  assign/yuv/yuv2lms_K65.cpp
  assign/yuv/yuv2lms_KE.cpp
  assign/yuv/yuv2lms_MCAT02.cpp
  assign/yuv/yuv2luv.cpp
  assign/yuv/yuv2LuvCH.cpp
  assign/yuv/yuv2rgb.cpp
  assign/yuv/yuv2xyy.cpp
  assign/yuv/yuv2xyz.cpp
  assign/yuv/yuv2YCgCo.cpp
  assign/yuv/yuv2YDbDr.cpp
  assign/yuv/yuv2yiq.cpp
  assign/yuv/yuv2YPbPr.cpp
  assign/yuv/yuv2YPbPr2020.cpp
  assign/yuv/yuv2YPbPr601.cpp
  assign/yuv/yuv2YPbPr709.cpp
  assign/yuv/yuv2yuv.cpp
  assign/yuv/yuv2yuv601.cpp
  assign/yuv/yuv2yuv709.cpp
  check/integrity_cmyk.cpp
  check/integrity_hsl.cpp
  check/integrity_hsv.cpp
  check/overburn_rgb.cpp
  check/unique_hsl.cpp
  check/unique_hsv.cpp
  compare/brighter_rgb.cpp
  compare/darker_rgb.cpp
  compare/different_rgb.cpp
  compare/equal_rgb.cpp
  compare/great_or_equal.cpp
  compare/great_strict_rgb.cpp
  compare/less_or_equal.cpp
  compare/less_strict.cpp
  constant/cmy/gray.cpp
  constant/cmy/lavander.cpp
  constant/cmy/orange.cpp
  constant/gray/gray.cpp
  constant/gray/lavander.cpp
  constant/gray/orange.cpp
  constant/lab/gray.cpp
  constant/lab/lavander.cpp
  constant/lab/orange.cpp
  constant/rgb/gray.cpp
  constant/rgb/lavander.cpp
  constant/rgb/orange.cpp
  convert/cmy2cmy.cpp
  convert/cmy2cmyk.cpp
  convert/cmy2gray.cpp
  convert/cmy2hsl.cpp
  convert/cmy2hsv.cpp
  convert/cmy2rgb.cpp
  convert/cmy2yiq.cpp
  convert/cmy2yuv.cpp
  convert/gray2cmy.cpp
  convert/gray2rgb.cpp
  convert/rgb2cmy.cpp
  convert/rgb2cmyk.cpp
  convert/rgb2gray.cpp
  convert/rgb2hsl.cpp
  convert/rgb2hsv.cpp
  convert/rgb2rgb.cpp
  convert/rgb2yiq.cpp
  convert/rgb2yuv.cpp
  ctor/const/cmy_lavender.cpp
  ctor/const/cmyk_lavender.cpp
  ctor/const/gray_lavender.cpp
  ctor/const/hsi_lavender.cpp
  ctor/const/hsl_lavender.cpp
  ctor/const/hsv_lavender.cpp
  ctor/const/hwb_lavender.cpp
  ctor/const/lab_lavender.cpp
  ctor/const/LabCH_lavender.cpp
  ctor/const/lms_lavender.cpp
  ctor/const/luv_lavender.cpp
  ctor/const/LuvCH_lavender.cpp
  ctor/const/rgb_lavender.cpp
  ctor/const/rgb_red.cpp
  ctor/const/xyy_lavender.cpp
  ctor/const/xyz_lavender.cpp
  ctor/const/YCgCo_lavender.cpp
  ctor/const/YDbDr_lavender.cpp
  ctor/const/yiq_lavender.cpp
  ctor/const/YPbPr_lavender.cpp
  ctor/const/yuv_lavender.cpp
  ctor/list/cmy.cpp
  ctor/list/cmyk.cpp
  ctor/list/gray.cpp
  ctor/list/hsi.cpp
  ctor/list/hsl.cpp
  ctor/list/hsv.cpp
  ctor/list/hwb.cpp
  ctor/list/lab.cpp
  ctor/list/LabCH.cpp
  ctor/list/lms.cpp
  ctor/list/luv.cpp
  ctor/list/LuvCH.cpp
  ctor/list/rgb.cpp
  ctor/list/xyy.cpp
  ctor/list/xyz.cpp
  ctor/list/YCgCo.cpp
  ctor/list/YDbDr.cpp
  ctor/list/yiq.cpp
  ctor/list/YPbPr.cpp
  ctor/list/yuv.cpp
  fix/integrity_cmyk.cpp
  fix/integrity_hsl.cpp
  fix/integrity_hsv.cpp
  fix/overburn_rgb.cpp
  fix/unique_hsl.cpp
  fix/unique_hsv.cpp
  format/2222/abgr.cpp
  format/2222/argb.cpp
  format/2222/bgra.cpp
  format/2222/cmyk.cpp
  format/2222/rgba.cpp
  format/233/bgr.cpp
  format/233/rgb.cpp
  format/332/bgr.cpp
  format/332/rgb.cpp
  format/4444/abgr.cpp
  format/4444/argb.cpp
  format/4444/bgra.cpp
  format/4444/cmyk.cpp
  format/4444/rgba.cpp
  format/556/bgr.cpp
  format/556/rgb.cpp
  format/655/bgr.cpp
  format/655/rgb.cpp
  format/8888/abgr.cpp
  format/8888/argb.cpp
  format/8888/bgra.cpp
  format/8888/cmyk.cpp
  format/8888/rgba.cpp
  format/AAA2/abgr.cpp
  format/AAA2/argb.cpp
  format/AAA2/bgra.cpp
  format/AAA2/cmyk.cpp
  format/AAA2/rgba.cpp
  format/double/cmy.cpp
  format/double/cmyk.cpp
  format/double/gray.cpp
  format/double/hsl.cpp
  format/double/hsv.cpp
  format/double/rgb.cpp
  format/double/yiq.cpp
  format/double/yuv.cpp
  format/float/cmy.cpp
  format/float/cmyk.cpp
  format/float/gray.cpp
  format/float/hsl.cpp
  format/float/hsv.cpp
  format/float/rgb.cpp
  format/float/yiq.cpp
  format/float/yuv.cpp
  format/ldouble/cmy.cpp
  format/ldouble/cmyk.cpp
  format/ldouble/gray.cpp
  format/ldouble/hsl.cpp
  format/ldouble/hsv.cpp
  format/ldouble/rgb.cpp
  format/ldouble/yiq.cpp
  format/ldouble/yuv.cpp
  format/uint16/cmy.cpp
  format/uint16/cmyk.cpp
  format/uint16/gray.cpp
  format/uint16/hsl.cpp
  format/uint16/hsv.cpp
  format/uint16/rgb.cpp
  format/uint16/yiq.cpp
  format/uint16/yuv.cpp
  format/uint32/cmy.cpp
  format/uint32/cmyk.cpp
  format/uint32/gray.cpp
  format/uint32/hsl.cpp
  format/uint32/hsv.cpp
  format/uint32/rgb.cpp
  format/uint32/yiq.cpp
  format/uint32/yuv.cpp
  format/uint64/cmy.cpp
  format/uint64/cmyk.cpp
  format/uint64/gray.cpp
  format/uint64/hsl.cpp
  format/uint64/hsv.cpp
  format/uint64/rgb.cpp
  format/uint64/yiq.cpp
  format/uint64/yuv.cpp
  format/uint8/cmy.cpp
  format/uint8/cmyk.cpp
  format/uint8/gray.cpp
  format/uint8/hsl.cpp
  format/uint8/hsv.cpp
  format/uint8/rgb.cpp
  format/uint8/yiq.cpp
  format/uint8/yuv.cpp
  get/blue_cmy.cpp
  get/blue_cmyk.cpp
  get/blue_gray.cpp
  get/blue_hsl.cpp
  get/blue_hsv.cpp
  get/blue_rgb.cpp
  get/blue_yiq.cpp
  get/blue_yuv.cpp
  get/gray_cmy.cpp
  get/gray_cmyk.cpp
  get/gray_gray.cpp
  get/gray_hsl.cpp
  get/gray_hsv.cpp
  get/gray_rgb.cpp
  get/gray_yiq.cpp
  get/gray_yuv.cpp
  get/green_cmy.cpp
  get/green_cmyk.cpp
  get/green_gray.cpp
  get/green_hsl.cpp
  get/green_hsv.cpp
  get/green_rgb.cpp
  get/green_yiq.cpp
  get/green_yuv.cpp
  get/hue_rgb.cpp
  get/hue_rgb_acos.cpp
  get/hue_rgb_atan2.cpp
  get/hue_rgb_hex.cpp
  get/hue_rgb_polar.cpp
  get/red_cmy.cpp
  get/red_cmyk.cpp
  get/red_gray.cpp
  get/red_hsl.cpp
  get/red_hsv.cpp
  get/red_rgb.cpp
  get/red_yiq.cpp
  get/red_yuv.cpp
  operation/addition.cpp
  operation/bias.cpp
  operation/blend/alpha2.cpp
  operation/blend/alpha3.cpp
  operation/blend/noalpha2.cpp
  operation/blend/noalpha3.cpp
  operation/convex1.cpp
  operation/convex2.cpp
  operation/distance/CIE76.cpp
  operation/distance/cie94g.cpp
  operation/distance/cie94t.cpp
  operation/distance/CIEDE2000.cpp
  operation/distance/CMC1984.cpp
  operation/distance/euclid.cpp
  operation/distance/gray.cpp
  operation/gain.cpp
  operation/gamma.cpp
  operation/invert/cmy.cpp
  operation/invert/cmyk.cpp
  operation/invert/gray.cpp
  operation/invert/hsl.cpp
  operation/invert/hsv.cpp
  operation/invert/rgb.cpp
  operation/invert/yiq.cpp
  operation/invert/yuv.cpp
  operation/mix_alpha.cpp
  operation/mix_noalpha.cpp
  operation/scale.cpp
  operation/subtract.cpp
  operator/addition.cpp
  operator/compare/equal.cpp
  operator/compare/great.cpp
  operator/compare/great_ore_qual.cpp
  operator/compare/less.cpp
  operator/compare/less_ore_qual.cpp
  operator/compare/not_equal.cpp
  operator/divide.cpp
  operator/scale.cpp
  operator/subtraction.cpp
  set/blue_cmy.cpp
  set/blue_cmyk.cpp
  set/blue_gray.cpp
  set/blue_hsi.cpp
  set/blue_hsl.cpp
  set/blue_hsv.cpp
  set/blue_rgb.cpp
  set/blue_yiq.cpp
  set/blue_yuv.cpp
  set/gray_cmy.cpp
  set/gray_cmyk.cpp
  set/gray_gray.cpp
  set/gray_hsl.cpp
  set/gray_hsv.cpp
  set/gray_rgb.cpp
  set/gray_yiq.cpp
  set/gray_yuv.cpp
  tip/inplace_conversion.cpp
  tip/memset.cpp
  trait/bound/cmy.cpp
  trait/bound/cmyk.cpp
  trait/bound/gray.cpp
  trait/bound/hsi.cpp
  trait/bound/hsl.cpp
  trait/bound/hsv.cpp
  trait/bound/lab.cpp
  trait/bound/lms.cpp
  trait/bound/luv.cpp
  trait/bound/rgb.cpp
  trait/bound/xyy.cpp
  trait/bound/xyz.cpp
  trait/bound/YCgCo.cpp
  trait/bound/YDbDr.cpp
  trait/bound/yiq.cpp
  trait/bound/YPbPr.cpp
  trait/bound/yuv.cpp
  trait/component/cmy.cpp
  trait/component/cmyk.cpp
  trait/component/gray.cpp
  trait/component/hsi.cpp
  trait/component/hsl.cpp
  trait/component/hsv.cpp
  trait/component/rgb.cpp
  trait/component/yiq.cpp
  trait/component/yuv.cpp
  trait/container/cmy.cpp
  trait/container/cmyk.cpp
  trait/container/gray.cpp
  trait/container/hsi.cpp
  trait/container/hsl.cpp
  trait/container/hsv.cpp
  trait/container/rgb.cpp
  trait/container/yiq.cpp
  trait/container/yuv.cpp
  trait/index/cmy.cpp
  trait/index/cmyk.cpp
  trait/index/gray.cpp
  trait/index/hsi.cpp
  trait/index/hsl.cpp
  trait/index/hsv.cpp
  trait/index/rgb.cpp
  trait/index/yiq.cpp
  trait/index/yuv.cpp
  trait/scalar/cmy.cpp
  trait/scalar/cmyk.cpp
  trait/scalar/gray.cpp
  trait/scalar/hsi.cpp
  trait/scalar/hsl.cpp
  trait/scalar/hsv.cpp
  trait/scalar/rgb.cpp
  trait/scalar/yiq.cpp
  trait/scalar/yuv.cpp
  )

add_custom_target (build_and_test ${CMAKE_CTEST_COMMAND} -V)
foreach (TESTSRC ${TEST_SRCS})
  string (REPLACE ".cpp" "" TESTBASE ${TESTSRC})
  string (REPLACE "/" "_" TESTBASE ${TESTBASE})
  set (TESTEXE "${TESTBASE}${CMAKE_EXECUTABLE_SUFFIX}")
  #message ("adding ${TESTSRC} / ${TESTEXE} / ${TESTBASE}")
  add_executable (${TESTEXE} ${TESTSRC})
  add_test (NAME ${TESTBASE}_ COMMAND ${TESTEXE})
  set_tests_properties (${TESTBASE}_ PROPERTIES DEPENDS ${TESTEXE})
  add_dependencies (build_and_test ${TESTEXE})
endforeach ()
