#cmake_minimum_required(VERSION 2.8)

project(ColorExampleProject)
 
add_subdirectory( akin )
add_subdirectory( assign )
add_subdirectory( check )
add_subdirectory( compare )
add_subdirectory( constant )
add_subdirectory( convert )
add_subdirectory( ctor )
add_subdirectory( fix )
add_subdirectory( format )
add_subdirectory( get )
add_subdirectory( operation )
add_subdirectory( operator )
add_subdirectory( place )
add_subdirectory( reference )
add_subdirectory( set )
add_subdirectory( tip )
add_subdirectory( trait )

add_executable(  ColorExample__less-than-1k__empty    empty.cpp )
add_executable(  ColorExample__less-than-1k__hello    hello.cpp )
add_executable(  ColorExample__less-than-1k__pp2f    pp2f.cpp )
