#cmake_minimum_required(VERSION 2.8)

add_subdirectory( cmy )
add_subdirectory( cmyk )
add_subdirectory( const )
add_subdirectory( gray )
add_subdirectory( hsi )
add_subdirectory( hsl )
add_subdirectory( hsv )
add_subdirectory( hwb )
add_subdirectory( lab )
add_subdirectory( LabCH )
add_subdirectory( lms )
add_subdirectory( luv )
add_subdirectory( LuvCH )
add_subdirectory( rgb )
add_subdirectory( tsl )
add_subdirectory( xyy )
add_subdirectory( xyz )
add_subdirectory( YCgCo )
add_subdirectory( YDbDr )
add_subdirectory( yiq )
add_subdirectory( YPbPr )
add_subdirectory( yuv )
