#cmake_minimum_required(VERSION 2.8)

add_subdirectory( 2222 )
add_subdirectory( 233 )
add_subdirectory( 332 )
add_subdirectory( 4444 )
add_subdirectory( 556 )
add_subdirectory( 655 )
add_subdirectory( 8888 )
add_subdirectory( AAA2 )
add_subdirectory( double )
add_subdirectory( float )
add_subdirectory( int16 )
add_subdirectory( int32 )
add_subdirectory( int64 )
add_subdirectory( int8 )
add_subdirectory( ldouble )
add_subdirectory( uint16 )
add_subdirectory( uint32 )
add_subdirectory( uint64 )
add_subdirectory( uint8 )
