#cmake_minimum_required(VERSION 2.8)

add_subdirectory( black )
add_subdirectory( blue )
add_subdirectory( chroma )
add_subdirectory( cyan )
add_subdirectory( gray )
add_subdirectory( green )
add_subdirectory( hue )
add_subdirectory( magenta )
add_subdirectory( red )
add_subdirectory( saturation )
add_subdirectory( temperature )
add_subdirectory( tint )
add_subdirectory( white )
add_subdirectory( yellow )
