#cmake_minimum_required(VERSION 2.8)

add_subdirectory( compare )

add_executable(   ColorExample__less-than-1k__operator__addition      addition.cpp )
add_executable(   ColorExample__less-than-1k__operator__divide        divide.cpp )
add_executable(   ColorExample__less-than-1k__operator__scale         scale.cpp )
add_executable(   ColorExample__less-than-1k__operator__subtraction   subtraction.cpp )





