#cmake_minimum_required(VERSION 2.8)

add_subdirectory( compare )

add_executable(   ColorExample__less-than-1k_operator_addition      addition.cpp )
add_executable(   ColorExample__less-than-1k_operator_divide        divide.cpp )
add_executable(   ColorExample__less-than-1k_operator_scale         scale.cpp )
add_executable(   ColorExample__less-than-1k_operator_subtraction   subtraction.cpp )





