#cmake_minimum_required(VERSION 2.8)

 
add_executable(  ColorExample__less-than-1k__reference__cmy           cmy.cpp          )
add_executable(  ColorExample__less-than-1k__reference__cmyk          cmyk.cpp         )
add_executable(  ColorExample__less-than-1k__reference__gray          gray.cpp         )
add_executable(  ColorExample__less-than-1k__reference__hsi           hsi.cpp          )
add_executable(  ColorExample__less-than-1k__reference__hsl           hsl.cpp          )
add_executable(  ColorExample__less-than-1k__reference__hsv           hsv.cpp          )
add_executable(  ColorExample__less-than-1k__reference__hwb           hwb.cpp          )
add_executable(  ColorExample__less-than-1k__reference__lab           lab.cpp          )
add_executable(  ColorExample__less-than-1k__reference__lab_CIE       lab_CIE.cpp      )
add_executable(  ColorExample__less-than-1k__reference__lab_Hunter    lab_Hunter.cpp   )
add_executable(  ColorExample__less-than-1k__reference__LabCH         LabCH.cpp        )
add_executable(  ColorExample__less-than-1k__reference__lms           lms.cpp          )
add_executable(  ColorExample__less-than-1k__reference__lms_BFD       lms_BFD.cpp      )
add_executable(  ColorExample__less-than-1k__reference__lms_MCAT02    lms_MCAT02.cpp   )
add_executable(  ColorExample__less-than-1k__reference__lms_vKD65     lms_vKD65.cpp    )
add_executable(  ColorExample__less-than-1k__reference__lms_vKE       lms_vKE.cpp      )
add_executable(  ColorExample__less-than-1k__reference__luv           luv.cpp          )
add_executable(  ColorExample__less-than-1k__reference__LuvCH         LuvCH.cpp        )
add_executable(  ColorExample__less-than-1k__reference__rgb           rgb.cpp          )
add_executable(  ColorExample__less-than-1k__reference__xyy           xyy.cpp          )
add_executable(  ColorExample__less-than-1k__reference__xyz           xyz.cpp          )
add_executable(  ColorExample__less-than-1k__reference__YCgCo         YCgCo.cpp        )
add_executable(  ColorExample__less-than-1k__reference__YDbDr         YDbDr.cpp        )
add_executable(  ColorExample__less-than-1k__reference__yiq           yiq.cpp          )
add_executable(  ColorExample__less-than-1k__reference__YPbPr         YPbPr.cpp        )
add_executable(  ColorExample__less-than-1k__reference__YPbPr_601     YPbPr_601.cpp    )
add_executable(  ColorExample__less-than-1k__reference__YPbPr_709     YPbPr_709.cpp    )
add_executable(  ColorExample__less-than-1k__reference__yuv           yuv.cpp          )
add_executable(  ColorExample__less-than-1k__reference__yuv_601       yuv_601.cpp      )
add_executable(  ColorExample__less-than-1k__reference__yuv_709       yuv_709.cpp      )