#cmake_minimum_required(VERSION 2.8)

add_executable(   ColorExample__less-than-2k__akin__cmy      cmy.cpp )
add_executable(   ColorExample__less-than-2k__akin__cmyk     cmyk.cpp )
add_executable(   ColorExample__less-than-2k__akin__gray     gray.cpp )
add_executable(   ColorExample__less-than-2k__akin__rgb      rgb.cpp )

