#cmake_minimum_required(VERSION 2.8)

add_executable(    ColorExample__less-than-2k__tip_place_conversion_bgr      bgr.cpp    )
add_executable(    ColorExample__less-than-2k__tip_place_conversion_cmy      cmy.cpp    )
add_executable(    ColorExample__less-than-2k__tip_place_conversion_cmyk     cmyk.cpp   )
add_executable(    ColorExample__less-than-2k__tip_place_conversion_gray     gray.cpp   )
add_executable(    ColorExample__less-than-2k__tip_place_conversion_hsi      hsi.cpp    )
add_executable(    ColorExample__less-than-2k__tip_place_conversion_hsl      hsl.cpp    )
add_executable(    ColorExample__less-than-2k__tip_place_conversion_hsv      hsv.cpp    )
add_executable(    ColorExample__less-than-2k__tip_place_conversion_hwb      hwb.cpp    )
add_executable(    ColorExample__less-than-2k__tip_place_conversion_lab      lab.cpp    )
add_executable(    ColorExample__less-than-2k__tip_place_conversion_LabCh    LabCh.cpp  )
add_executable(    ColorExample__less-than-2k__tip_place_conversion_lms      lms.cpp    )
add_executable(    ColorExample__less-than-2k__tip_place_conversion_luv      luv.cpp    )
add_executable(    ColorExample__less-than-2k__tip_place_conversion_LuvCH    LuvCH.cpp  )
add_executable(    ColorExample__less-than-2k__tip_place_conversion_rgb      rgb.cpp    )
add_executable(    ColorExample__less-than-2k__tip_place_conversion_xyy      xyy.cpp    )
add_executable(    ColorExample__less-than-2k__tip_place_conversion_xyz      xyz.cpp    )
add_executable(    ColorExample__less-than-2k__tip_place_conversion_YCgCo    YCgCo.cpp  )











































