    #cmake_minimum_required(VERSION 2.8)

add_executable(   ColorExample__less-than-1k__assign__LabCH__LabCH2cmy      LabCH2cmy.cpp )
add_executable(   ColorExample__less-than-1k__assign__LabCH__LabCH2cmyk      LabCH2cmyk.cpp )
add_executable(   ColorExample__less-than-1k__assign__LabCH__LabCH2gray      LabCH2gray.cpp )
add_executable(   ColorExample__less-than-1k__assign__LabCH__LabCH2hsi      LabCH2hsi.cpp )
add_executable(   ColorExample__less-than-1k__assign__LabCH__LabCH2hsl      LabCH2hsl.cpp )
add_executable(   ColorExample__less-than-1k__assign__LabCH__LabCH2hsv      LabCH2hsv.cpp )
add_executable(   ColorExample__less-than-1k__assign__LabCH__LabCH2hwb      LabCH2hwb.cpp )
add_executable(   ColorExample__less-than-1k__assign__LabCH__LabCH2lab      LabCH2lab.cpp )
add_executable(   ColorExample__less-than-1k__assign__LabCH__LabCH2lab_CIE      LabCH2lab_CIE.cpp )
add_executable(   ColorExample__less-than-1k__assign__LabCH__LabCH2lab_Hunter      LabCH2lab_Hunter.cpp )
add_executable(   ColorExample__less-than-1k__assign__LabCH__LabCH2LabCH      LabCH2LabCH.cpp )
add_executable(   ColorExample__less-than-1k__assign__LabCH__LabCH2lms      LabCH2lms.cpp )
add_executable(   ColorExample__less-than-1k__assign__LabCH__LabCH2lms_BFD      LabCH2lms_BFD.cpp )
add_executable(   ColorExample__less-than-1k__assign__LabCH__LabCH2lms_K65      LabCH2lms_K65.cpp )
add_executable(   ColorExample__less-than-1k__assign__LabCH__LabCH2lms_KE      LabCH2lms_KE.cpp )
add_executable(   ColorExample__less-than-1k__assign__LabCH__LabCH2lms_MCAT02      LabCH2lms_MCAT02.cpp )
add_executable(   ColorExample__less-than-1k__assign__LabCH__LabCH2luv      LabCH2luv.cpp )
add_executable(   ColorExample__less-than-1k__assign__LabCH__LabCH2LuvCH      LabCH2LuvCH.cpp )
add_executable(   ColorExample__less-than-1k__assign__LabCH__LabCH2rgb      LabCH2rgb.cpp )
add_executable(   ColorExample__less-than-1k__assign__LabCH__LabCH2xyy      LabCH2xyy.cpp )
add_executable(   ColorExample__less-than-1k__assign__LabCH__LabCH2xyz      LabCH2xyz.cpp )
add_executable(   ColorExample__less-than-1k__assign__LabCH__LabCH2YCgCo      LabCH2YCgCo.cpp )
add_executable(   ColorExample__less-than-1k__assign__LabCH__LabCH2YDbDr      LabCH2YDbDr.cpp )
add_executable(   ColorExample__less-than-1k__assign__LabCH__LabCH2yiq      LabCH2yiq.cpp )
add_executable(   ColorExample__less-than-1k__assign__LabCH__LabCH2YPbPr      LabCH2YPbPr.cpp )
add_executable(   ColorExample__less-than-1k__assign__LabCH__LabCH2YPbPr2020      LabCH2YPbPr2020.cpp )
add_executable(   ColorExample__less-than-1k__assign__LabCH__LabCH2YPbPr601      LabCH2YPbPr601.cpp )
add_executable(   ColorExample__less-than-1k__assign__LabCH__LabCH2YPbPr709      LabCH2YPbPr709.cpp )
add_executable(   ColorExample__less-than-1k__assign__LabCH__LabCH2yuv      LabCH2yuv.cpp )
add_executable(   ColorExample__less-than-1k__assign__LabCH__LabCH2yuv601      LabCH2yuv601.cpp )
add_executable(   ColorExample__less-than-1k__assign__LabCH__LabCH2yuv709      LabCH2yuv709.cpp )































